# tsuru_code_sample

./: .gitignore  README.md  marketfeed.cabal  parse-quote-sorted.prof  parse-quote-unsorted.prof  parse-quote.cabal  stack.yaml
app/: Main.hs
src/: Helper.hs  Model.hs
test/: Spec.hs
