name:                parse-quote
version:             0.1.0.0
synopsis:            Code sample for tsuru capital
description:         Please see README.md
homepage:            https://github.com/crosscent/tsuru_code_sample
license:             BSD3
license-file:        LICENSE
author:              Roy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Model
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.6.0
                     , conduit == 1.2.6.6
                     , pcap == 0.4.5.2
                     , pcap-conduit == 0.1
                     , transformers == 0.4.2.0
  default-language:    Haskell2010

executable parse-quote
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parse-quote
                     , bytestring == 0.10.6.0
                     , conduit == 1.2.6.6
                     , pcap == 0.4.5.2
                     , pcap-conduit == 0.1
                     , transformers == 0.4.2.0
  default-language:    Haskell2010

test-suite parse-quote-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parse-quote
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/crosscent/tsuru_code_sample
